--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,12 +77,13 @@ jobs:
           echo "cf_id=$CF_ID" >> $GITHUB_OUTPUT
 
       - name: Invalidate CloudFront cache
+        if: ${{ steps.cf-id.outputs.cf_id != '' }}
         run: |
           echo "Invalidating CloudFront cache..."
           aws cloudfront create-invalidation \
             --distribution-id ${{ steps.cf-id.outputs.cf_id }} \
             --paths "/*"
-
+      
       - name: Get CloudFront URL
         id: cf-url
         run: |
