--- a/cfn/aws-cft.yaml
+++ b/cfn/aws-cft.yaml
@@ -85,3 +85,5 @@ Outputs:
   CloudFrontDomainName:
     Description: "CloudFront Distribution Domain Name"
     Value: !GetAtt CloudFrontDistribution.DomainName
+    Export:
+      Name: CloudFrontDomainName
